--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "flowbite": "^3.1.2",
+    "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
+    "simple-datatables": "^9.2.1",
+    "sweetalert2": "^11.19.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -35,7 +37,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.7.2"
   }
 }
