--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-select/ng-select": "^14.7.0",
     "flowbite": "^2.5.2",
     "rxjs": "~7.8.0",
     "simple-datatables": "^9.2.1",
