--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.10",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -19,6 +20,10 @@
     "@angular/router": "^19.2.0",
     "@ng-select/ng-select": "^14.7.0",
     "flowbite": "^2.5.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "ngx-extended-pdf-viewer": "^23.1.1",
     "rxjs": "~7.8.0",
     "simple-datatables": "^9.2.1",
     "sweetalert2": "^11.19.1",
